# 2gis-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  compose.yml  pyproject.toml
docker/: Dockerfile
https/: categories.http  geocode.http  markers.http  place.http  regions.http  suggest.http
src/: dgis_search_mcp.py  logger.py  main.py  models.py  settings.py
tests/: test_geocoder_validator.py
